# NO_queue-Projectsite

./: .replit  LICENSE  README.md  admin.css  admin.js  app.py  client_dashboard.css  pyproject.toml  service_provider_dashboard.js  slot_booking.html
NoQ/NoQ/landing page/: index_script.js  index_styles.css
static/: client_dashboard.js  index_script.js  login.css  login.js  service_provider_dashboard.css  slot_booking.css  slot_booking.js
template/: admin.html  client_dashboard.html  index.html  login.html  service_provider_dashboard.html
templates/: admin.html  client_dashboard.html  index.html  login.html  service_provider_dashboard.html  slot_booking.html
